fix: prevent eyes from showing on mobile

--- a/styles/global.css
+++ b/styles/global.css
@@ -42,7 +42,7 @@ body {
   left: 0;
 }
 
-canvas {
+.three-scene > canvas {
   display: block;
   z-index: -1;
   border: none;
